Sets width to filters column to fix layout issue on schedule list view. (#228)

--- a/src/style/full-schedule.module.scss
+++ b/src/style/full-schedule.module.scss
@@ -40,6 +40,7 @@
     position: relative;
     width: 30%;
     margin: 15px 0 0 30px;
+    width: 30%;
 
     @media (min-width: 991px) {
       position: sticky;
